--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
 
 
     <Button
-        android:text="Odeslat"
+        android:text="Platba"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -22,14 +22,32 @@
         android:onClick="onButtonSendClicked" />
 
     <TextView
-        android:text="TextView"
+        android:text="Od posledního spuštění nebyly\nprovedeny žádné platby"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/textView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="52dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="83dp"
-        android:id="@+id/textView2" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true" />
+
+    <TextView
+        android:text="Seznam provedenych plateb:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonSend"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView4"
+        android:textSize="18sp" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/list" />
 
 </RelativeLayout>
